fixes to calendar day view, issue with date change tooltip not showing on second click

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -2941,7 +2941,10 @@ a {
 	.date-header {
 		border: 0;
 		line-height: 40px;
-		margin: 0 remCalc(100px) 0 10px;
+		margin: 0 remCalc(40px) 0 10px;
+		@media (min-width:1440px) {
+			margin: 0 remCalc(100px) 0 10px;
+		}
 	}
 	.btn-xs {
 		margin-top: 10px;
@@ -3143,7 +3146,7 @@ a {
 }
 .edit-menu {
 	text-transform: uppercase;
-	font-size: 11px;
+	font-size: remCalc(11px);
 	letter-spacing: .25em;
 	.list-group-item {
 		list-style: none;
